<resources>
    <string name="app_name">SWT</string>
    <string name="label_action"></string>
    <string name="action_search">Search</string>
    <string name="action_update">Update</string>
    <string name="action_about">About</string>
    <string name="google_maps_key">AIzaSyDSjoIcWmuvrI71BhWwk4KyU6iQxhqWM4g</string>
    <string name="toast_failed_getting_location">位置情報の取得に失敗しました\nもう一度ボタンを押してください</string>
    <string name="toast_no_networks">機能を使用するためにはネットワークを有効にしてください</string>
    <string name="saveinstance_key_last_query">LAST_QUERY</string>
    <string name="request_enable_location">2</string>
    <string name="request_permission">1</string>
    <string name="searchview_queryhint">名称や住所から検索</string>
    <string name="suggest_search_all">すべて表示</string>
    <string name="marker_address">住所:</string>
    <string name="marker_availabletime">\n利用可能時間:</string>
    <string name="toast_no_results">情報が見つかりませんでした\n検索キーワードを変更するか\nデータを再読み込みしてください</string>
    <string name="about_title">このアプリについて</string>
    <string name="about_description">このアプリは和歌山県が公開しているtoilet-mapを元に作成したものです。\nソースコードはGithubにて公開しています。ご要望、プルリクなどいただければ善処いたします_(._.)_</string>
    <string name="about_project_link">SearchWakayamaToilet - Github</string>
    <string name="about_project_url">https://github.com/masanori840816/SearchWakayamaToilet</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_title_toiletmap">toilet-map</string>
    <string name="about_credits_toiletmap">このアプリは和歌山県の公開するtoilet-mapのデータを使用しています。このデータはCreative Commons License 表示 2.1のもとでライセンスされています。</string>
    <string name="about_credits_toiletmap_link">toilet-map - Github</string>
    <string name="about_credits_toiletmap_url">https://github.com/wakayama-pref-org/toilet-map</string>
    <string name="about_credits_title_retrolambda">Gradle Retrolambda Plugin</string>
    <string name="about_credits_retrolambda">このアプリはGradle Retrolambda Pluginを使用しています。このLibraryはApache License ver.2.0でライセンスされています。</string>
    <string name="about_credits_retrolambda_link">Retrolambda - Github</string>
    <string name="about_credits_retrolambda_url">https://github.com/orfjackal/retrolambda</string>
    <string name="about_credits_title_lightweight_stream_api">Lightweight-Stream-API</string>
    <string name="about_credits_lightweight_stream_api">このアプリはLightweight-Stream-APIを使用しています。このLibraryはApache License ver.2.0でライセンスされています。</string>
    <string name="about_credits_lightweight_stream_api_link">Lightweight-Stream-API - Github</string>
    <string name="about_credits_lightweight_stream_api_url">https://github.com/aNNiMON/Lightweight-Stream-API</string>
    <string name="about_credits_title_android_retrolambda_lombok">android-retrolambda-lombok</string>
    <string name="about_credits_android_retrolambda_lombok">このアプリはandroid-retrolambda-lombokを使用しています。このLibraryは以下の規約でライセンスされています。\n\n
        Copyright © 2010-2011 The Project Lombok Authors.\n\n
        Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n
        The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="about_credits_android_retrolambda_lombok_link">android-retrolambda-lombok - Github</string>
    <string name="about_credits_android_retrolambda_lombok_url">https://github.com/evant/android-retrolambda-lombok</string>
    <string name="error_title">問題が発生しました</string>
    <string name="error_dialog">アプリの実行中に問題が発生しました。以下の内容を開発者にご連絡ください。:\n</string>
</resources>